# coursework_db

./: README.md  pyproject.toml
src/: add_data_to_db.py  config.py  create_table.sql  database.ini  db_manager.py  get_api_hh.py
